@@ -36,6 +36,7 @@
   34. Jewelmaking can now make jewelry that Requires piercings from BodyPierce.  Works off new class GenEarring.
   35. ScrimShaw got some serious love, becoming only common skill that can make doppleganger items at high levels.
   36. Prop_Doppleganger now supports ASMATERIAL argument to alter the way stats are calculated.
+  37. New expertise: Shadow -- for lower cost sneaking and hiding
 # Build 5.8.2 Release 6/13/2014
    0. Database Schema Updated! Run DBUpgrade, OR manually alter table CMCHCL to add CMCLSTS (see appropriate schema file)
    1. CM1Server has "FILE" command now for directory browsing/manipulation
